crates/tui/src/snapshots/tui__model_picker__view_tests__model_picker_attached_80x24.snap
---
source: crates/tui/src/model_picker_view_tests.rs
assertion_line: 159
expression: "screen(&app, 80, 24)"
---

Models · switching rebuilds the cache: about 201,034 tokens                    ✕
↻ refresh
acme
m1 · deep, review   low [high]
m2
zeta
z1   [low]
z2 · chat   low [high]











↑↓ move · ←→ level · PageUp PageDown page · Tab scope · Ctrl+R refresh · Esc clo
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
