crates/tui/src/snapshots/tui__model_picker__view_tests__model_picker_no_models.snap
---
source: crates/tui/src/model_picker_view_tests.rs
assertion_line: 194
expression: "screen(&app, 80, 24)"
---

Models                                                                         ✕
↻ refresh
















No models. Install a provider: fiber extension install <name>.
Enter set as default · s this session only · ↑↓ move · ←→ level · PageUp PageDow
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
