crates/tui/src/snapshots/tui__model_picker__view_tests__model_picker_on_home.snap
---
source: crates/tui/src/model_picker_view_tests.rs
assertion_line: 187
expression: "screen(&app, 80, 24)"
---
Models                                                                         ✕
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄

  Type to search █
  4 models                                                       ⟳ refresh all
  acme
  › m1 [deep] [review]
        thinking low [high]
    m2
        fixed thinking

  zeta
    z1
        thinking [low]
    z2 [chat]
        thinking low [high]

  ↑↓ move · ←→ levels · enter choose · tab all · ctrl+s session · ctrl+r refre

▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
