crates/tui/src/snapshots/tui__model_picker__view_tests__model_picker_reading.snap
---
source: crates/tui/src/model_picker_view_tests.rs
assertion_line: 185
expression: "screen(&app, 80, 24)"
---

Models                                                                         ✕
↻ refresh
















Reading the model lists…
Enter set as default · s this session only · ↑↓ move · ←→ level · PageUp PageDow
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
