crates/tui/src/snapshots/tui__model_picker__view_tests__model_picker_scoped_with_the_toggle_line.snap
---
source: crates/tui/src/model_picker_view_tests.rs
assertion_line: 176
expression: "screen(&app, 80, 24)"
---
Models                                                                         ✕
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄

  Type to search █
  scoped · 2 of 4 [show all]                                     ⟳ refresh all
  acme
  › m1 [deep] [review]
        thinking low [high]

  zeta
    z2 [chat]
        thinking low [high]

  ↑↓ move · ←→ levels · enter choose · tab all · ctrl+s session · ctrl+r refre

▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
